@@ -1,6 +1,7 @@
 Version 2.01.06 - 
 ====================================
   Suppress 'open failed' error messages during scanning.
+  Option to suppress warnings of file descriptors left open.
   Fix default value of metadatacopies in documentation (2->1).
   Fix clvmd-gulm locking.
   ./configure --enable-debug now enables debugging code in clvmd.
